--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -14,7 +14,7 @@ html
     .main 
         block main
 
-
+  script(src="/admin/js/script.js") 
   script(src="/js/script.js") 
   script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
   script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
