--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -5,9 +5,25 @@ block main
     .card.mb-3 
       .card-header Bộ lọc và Tìm kiếm
       .card-body 
-        each item in filterStatus
-          button(class =`btn btn-sm ml-1 btn-outline-success ${item.class}` button-status=item.status) #{item.name}
-
+        .row
+          .col-6
+            each item in filterStatus
+              button(class =`btn btn-sm ml-1 btn-outline-success ${item.class}` button-status=item.status) #{item.name}
+          .col-6 
+            form(id="form-search")
+              .input-group 
+                input(
+                  type="text"
+                  placeholder="Nhập từ khóa"
+                  name="keyword"
+                  class="form-control"
+                  value=keyword 
+                )
+                .input-group-append 
+                  button(
+                    type="submit"
+                    class="btn btn-success"
+                  ) Tìm
     .card.mb-3 
       .card-header Danh sách sản phẩm
       .card-body 
