--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,4 +1,9 @@
 extends ../../layouts/default.pug
+include ../../mixins/filterStatus.pug
+include ../../mixins/search.pug
+include ../../mixins/pagination.pug
+
+
 
 block main
     h3 Quản Lý Sản Phẩm
@@ -7,23 +12,9 @@ block main
       .card-body 
         .row
           .col-6
-            each item in filterStatus
-              button(class =`btn btn-sm ml-1 btn-outline-success ${item.class}` button-status=item.status) #{item.name}
+            +filter-Status(filterStatus)
           .col-6 
-            form(id="form-search")
-              .input-group 
-                input(
-                  type="text"
-                  placeholder="Nhập từ khóa"
-                  name="keyword"
-                  class="form-control"
-                  value=keyword 
-                )
-                .input-group-append 
-                  button(
-                    type="submit"
-                    class="btn btn-success"
-                  ) Tìm
+            +search(keyword)
     .card.mb-3 
       .card-header Danh sách sản phẩm
       .card-body 
@@ -57,19 +48,5 @@ block main
                   button(class="btn btn-warning btn-sm") Sửa
                   button(class="btn btn-danger btn-sm ml-1") Xóa  
     nav.d-flex.justify-content-end
-      ul(class="pagination")
-
-        if(pagination.currentPage > 1)
-          li(class="page-item")
-            button(class="page-link" button-pagination = 1) Trang đầu
-          li(class="page-item")
-            button(class="page-link" button-pagination = pagination.currentPage - 1) Trang trước
-        - for(var i = 1; i <= pagination.totalPage; i++)
-          li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
-            button(class="page-link"
-            button-pagination = i ) #{i}
-        if(pagination.currentPage < pagination.totalPage)
-          li(class="page-item")
-            button(class="page-link" button-pagination = pagination.currentPage + 1) Kế tiếp
-          li(class="page-item")
-            button(class="page-link" button-pagination = pagination.totalPage) Trang cuối
+      +pagination(pagination)
+    
