--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ../../layouts/default.pug
 include ../../mixins/filterStatus.pug
 include ../../mixins/search.pug
 include ../../mixins/pagination.pug
+include ../../mixins/form-change-multi.pug
 
 
 
@@ -17,11 +18,18 @@ block main
             +search(keyword)
     .card.mb-3 
       .card-header Danh sách sản phẩm
-      .card-body 
-        table.table.table-bordered.table-hover.text-center
-          thead.table-dark
+        .card-body 
+          +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+
+        table(
+          class="table table-hover table-sm"
+          checkbox-multi
+        )
+          thead
             tr
-              th ID
+              th 
+                input(type="checkbox" name="checkall")
+              th STT
               th Ảnh
               th Tên Sản Phẩm
               th Giá
@@ -30,6 +38,12 @@ block main
           tbody
             each item, index in products
               tr
+                td 
+                  input(
+                    type="checkbox"
+                    name="id"
+                    value=item.id 
+                  )
                 td #{index + 1}
                 td: img.img-thumbnail(
                   src= item.thumbnail 
