--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -67,7 +67,11 @@ block main
                       data-id = item.id) Dừng hoạt động
                 td
                   button(class="btn btn-warning btn-sm") Sửa
-                  button(class="btn btn-danger btn-sm ml-1") Xóa  
+                  button(
+                    class="btn btn-danger btn-sm ml-1"
+                    button-delete
+                    data-id=item.id
+                    ) Xóa  
     nav.d-flex.justify-content-end
       +pagination(pagination)
   
@@ -77,4 +81,8 @@ block main
      id="form-change-status",
      data-path=`${prefixAdmin}/products/change-status`) 
 
+    form(action="",
+     method="POST",
+     id="form-delete-item",
+     data-path=`${prefixAdmin}/products/delete`) 
     script(src="/admin/js/product.js") 
