--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,8 +1,9 @@
 extends ../../layouts/default.pug
-
+include ../../mixins/alert.pug
 block main 
+    +alert-error(5000)
+
     h1(class="mb-4") Thêm mới sản phẩm 
-    
     form(
         action = `${prefixAdmin}/products/create`
         id="form-create-product"
@@ -21,8 +22,8 @@ block main
             )
         div(class="form-group")
             lable(for="desc") Mô tả
-            input(
-                type="text"
+            textarea(
+                type="textbox"
                 class="form-control"
                 id="desc"
                 name="description"
