--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -81,7 +81,7 @@ block main
                       data-status = item.status
                       data-id = item.id) Dừng hoạt động
                 td
-                  button(class="btn btn-warning btn-sm") Sửa
+                  a(href=`${prefixAdmin}/products/edit/${item.id}` class="btn btn-warning btn-sm") Sửa
                   button(
                     class="btn btn-danger btn-sm ml-1"
                     button-delete
