--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -18,3 +18,5 @@ html
   script(src="/js/script.js") 
   script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
   script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js")
+  script(src= "/tinymce/tinymce.min.js")
+  script(src= "/admin/js/tinymce-config.js")
