--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -109,8 +109,10 @@ block main
             )
             lable(for="statusActive" class="form-check-lable") Dừng hoạt Động
         div(class="form-group")
-            button(type="submit"
-                class="btn btn-primary") Cập nhật 
+            button(type="submit" class="btn btn-primary") Cập nhật 
+
+            a(href="/admin/products" class="btn btn-warning") Quay lại
+
 
     link(rel="stylesheet", href="/css/style.css")
     script(src="/admin/js/product.js") 
