--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -11,7 +11,7 @@ include ../../mixins/sort.pug
 block main
     +alert-success("5000")
  
-    h1 Quản Lý Sản Phẩm
+    h1 Quản Lý Danh Mục Sản Phẩm
     .card.mb-3 
       .card-header Bộ lọc và Tìm kiếm
       .card-body 
@@ -21,13 +21,13 @@ block main
           .col-6 
             +search(keyword)
     .card.mb-3 
-      .card-header Danh sách sản phẩm
+      .card-header Danh sách
         .card-body 
           .row
             .col-8 
-              +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+              +form-change-multi(`${prefixAdmin}/products-category/change-multi?_method=PATCH`)
             .col-4 
-              a(href=`${prefixAdmin}/products/create`
+              a(href=`${prefixAdmin}/products-category/create`
                 class="btn btn-outline-success"
               ) + Thêm mới
 
@@ -36,7 +36,7 @@ block main
       .card-body 
         .row 
           .col-4 
-            +sort()
+            +sort(hidePrice)
         table(
           class="table table-hover table-sm"
           checkbox-multi
@@ -47,13 +47,12 @@ block main
                 input(type="checkbox" name="checkall")
               th STT
               th Ảnh
-              th Tên Sản Phẩm
-              th Giá
+              th Tiêu đề
               th Vị trí
               th Trạng Thái
               th Hành Động
           tbody
-            each item, index in products
+            each item, index in records
               tr
                 td 
                   input(
@@ -69,7 +68,6 @@ block main
                   height="auto"
                   )
                 td #{item.title}
-                td #{item.price}$
                 td 
                   input(type="number"
                     value=item.position
@@ -90,11 +88,11 @@ block main
                       data-id = item.id) Dừng hoạt động
                 td  
                   a(
-                    href=`${prefixAdmin}/products/detail/${item.id}`
+                    href=`${prefixAdmin}/products-category/detail/${item.id}`
                     class="btn btn-info btn-sm-1"
                   ) Chi tiết
                 td
-                  a(href=`${prefixAdmin}/products/edit/${item.id}` class="btn btn-warning btn-sm-1") Sửa
+                  a(href=`${prefixAdmin}/products-category/edit/${item.id}` class="btn btn-warning btn-sm-1") Sửa
                 td 
                   button(
                     class="btn btn-danger btn-sm ml-1"
@@ -108,12 +106,12 @@ block main
     form(action="",
      method="POST",
      id="form-change-status",
-     data-path=`${prefixAdmin}/products/change-status`) 
+     data-path=`${prefixAdmin}/products-category/change-status`) 
 
     form(action="",
      method="POST",
      id="form-delete-item",
-     data-path=`${prefixAdmin}/products/delete`) 
+     data-path=`${prefixAdmin}/products-category/delete`) 
 
 
     link(rel="stylesheet", href="/css/style.css")
