--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,5 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
+
 block main 
     +alert-error(5000)
 
@@ -20,6 +22,16 @@ block main
                 name="title"
                 required 
             )
+        div(class="form-group")
+            lable(for="product_category_id") Danh mục
+            select(
+                name="product_category_id"
+                id="product_category_id"
+                class="form-control"
+            )
+                option(value="") -- Chọn danh mục --
+                if(category)
+                    +select-tree(category)
         div(class="form-group")
             lable(for="desc") Mô tả
             textarea(
